<resources>
    <string name="app_name">Snacks Pop</string>
    <string name="facebook_app_id">1196789550439384</string>
    <string name="fb_login_protocol_scheme">fb1196789550439384</string>
    <string name="message_no_internet">No Internet Available</string>
    <string name="message_server_down">Server down or issue with the connection</string>
    <string name="message_server_down_or_internet">Server down or issue with the internet connection. Please check your connection.</string>
    <string name="message_camera_permision">Camera permission not granted.</string>
    <string name="message_gallery_permission">Gallery permission not granted.</string>
    <string name="google_maps_key">AIzaSyDQEjtT-uFRqaDysnPlTQegcmi89W-2-nE</string>

    <!--Login-->
    <string name="label_login">Login</string>
    <string name="prompt_your_email">Your E-mail Address</string>
    <string name="prompt_password">Password</string>
    <string name="label_create_new_account">Create New account</string>
    <string name="label_forgot_password">Forgot password?</string>
    <string name="message_required_field">This field is required</string>
    <string name="message_invalid_email">This email field is invalid</string>

    <!--Signin-->
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_email">Email address</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="label_create_account">Create Account</string>

    <!--Verfiation-->
    <string name="label_verfy">Verfy</string>
    <string name="prompt_verfication_code">Verification Code</string>

    <!--Forgot Password-->
    <string name="label_send_verification">Send</string>

    <!--Change Password-->
    <string name="label_change_password">Change Password</string>
    <string name="message_password_changed">Password Changed Successfully</string>
    <string name="message_saved">Saved Successfully</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_home">Home</string>
    <string name="nav_profile">My Profile</string>
    <string name="nav_my_product">My Products</string>
    <string name="nav_chat">My Chat</string>
    <string name="nav_about_us">About us</string>
    <string name="nav_log_out">Log-out</string>
    <string name="nav_log_in">Log-in</string>
    <string name="no_ggodies_found">Sorry!! No goodies nearby </string>
    <!--Home-->
    <string name="label_set_location">Set Location</string>
    <string name="label_order_status">Order and Status</string>
    <string name="label_order_details">Order Details</string>
    <string name="label_withdrwawal">Withdrawal</string>
    <string name="label_add_new">Add new item</string>
    <string name="label_distance">Distance</string>
    <string name="label_price">Price</string>
    <string name="prompt_search">Search</string>

    <!--Item Details-->
    <string name="label_product_description">Product Description : </string>
    <string name="label_save">Save</string>
    <string name="label_edit">Edit</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_out_of">Set Out of Stock</string>
    <string name="label_reout_of">Remove Out of Stock</string>
    <string name="message_accept_new_order">Do you accept this order?</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="message_item_created">New Item Created Successfully.</string>


    <string name="gps_message">GPS is required for this feature to work. Please enable it to procced.</string>
    <string name="label_settings">Settings</string>

    <!--Order Status-->
    <string name="label_completed">Completed</string>
    <string name="label_all">All</string>
    <string name="label_new">New</string>
    <string name="label_processing">Processing</string>
    <string name="label_canceled">Canceled</string>
    <string name="label_total_item">Total Item</string>
    <string name="label_total_amount">Total Amount</string>
    <string name="label_delivery_charges">Delivery Charges</string>

    <!--Edit ItemDetails-->
    <string name="promt_product_name">Product Name</string>
    <string name="promt_product_description">Product Description</string>
    <string name="promt_product_price">Product price</string>
    <string name="label_camera">Camera</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_crop">Save</string>

    <!--Timing -->
    <string name="label_day">Day</string>
    <string name="label_open_time">Open Time</string>
    <string name="label_timings">Timings</string>
    <string name="label_close_time">Close Time</string>
    <string name="label_sun">SUN</string>
    <string name="label_mon">MON</string>
    <string name="label_tue">TUE</string>
    <string name="label_wed">WED</string>
    <string name="label_thu">THU</string>
    <string name="label_fri">FRI</string>
    <string name="label_sat">SAT</string>

    <string name="label_sunday">Sunday</string>
    <string name="label_monday">Monday</string>
    <string name="label_tueday">Tuesday</string>
    <string name="label_wednesday">Wednesday</string>
    <string name="label_thursday">Thursday</string>
    <string name="label_friday">Friday</string>
    <string name="label_saturday">Saturday</string>

    <string name="label_update">Update</string>

    <string name="order_item_detail_title">Item details</string>
    <!--Withdrawal-->
    <string name="label_my_balance">My Balance</string>
    <string name="label_withdraw">Withdraw</string>
    <string name="label_address">Address</string>

    <!--Add New Address-->
    <string name="prompt_add_line">Address Line 1</string>
    <string name="prompt_add_line2">Address Line 2</string>
    <string name="prompt_country">Country</string>
    <string name="prompt_state">State/Province/County</string>
    <string name="prompt_city">City</string>
    <string name="prompt_zip">Zip Code/Postal Code</string>
    <string name="message_Address_changed">Address Changed Successfully</string>

    <string name="label_dummy">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,</string>
    <string name="action_settings">Settings</string>

    <string name="label_filters">Filter</string>
    <string name="label_chat">Chatting</string>
    <string name="label_foods">Food</string>
    <string name="label_include">Include Closed</string>
    <string name="label_clear">Clear</string>
    <string name="label_apply">Apply</string>

</resources>
