<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/nav_profile" />

        <item
            android:id="@+id/nav_my_product"
            android:icon="@drawable/ic_product"
            android:title="@string/nav_my_product" />

        <item
            android:id="@+id/nav_my_chat"
            android:icon="@drawable/ic_message"
            android:title="@string/nav_chat" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_help"
            android:title="@string/nav_about_us" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/nav_log_out" />
    </group>
</menu>
