<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucent_background"
    android:padding="@dimen/scale_25">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/colorPrimary"
        android:padding="@dimen/scale_15">

        <TextView
            android:id="@+id/txt_diaTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="@dimen/scale_15"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_scale_20" />

        <TextView
            android:id="@+id/txt_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_diaTitle"
            android:layout_marginTop="@dimen/scale_15"
            android:text="@string/gps_message"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_scale_15" />

        <TextView
            android:id="@+id/txt_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txt_message"
            android:layout_marginTop="@dimen/scale_25"
            android:padding="@dimen/scale_5"
            android:text="@string/label_settings"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_scale_15" />

        <TextView
            android:id="@+id/txt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_message"
            android:layout_marginRight="@dimen/scale_10"
            android:layout_marginTop="@dimen/scale_25"
            android:layout_toLeftOf="@+id/txt_setting"
            android:padding="@dimen/scale_5"
            android:text="@string/label_cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_scale_15" />

    </RelativeLayout>
</RelativeLayout>