<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.snackspop.snackspopnew.SetAddressActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/scale_5">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_back" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/scale_20"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <EditText
            android:id="@+id/et_address_line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_add_line"
            android:paddingEnd="@dimen/common_input_padding"
            android:paddingStart="@dimen/common_input_padding"
            android:textSize="@dimen/common_input_text_size" />

        <EditText
            android:id="@+id/et_address_line2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_add_line2"
            android:paddingEnd="@dimen/common_input_padding"
            android:paddingStart="@dimen/common_input_padding"
            android:textSize="@dimen/common_input_text_size" />

        <EditText
            android:id="@+id/et_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_country"
            android:inputType="textPersonName"
            android:paddingEnd="@dimen/common_input_padding"
            android:paddingStart="@dimen/common_input_padding"
            android:textSize="@dimen/common_input_text_size" />

        <EditText
            android:id="@+id/et_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_state"
            android:inputType="textPersonName"
            android:paddingEnd="@dimen/common_input_padding"
            android:paddingStart="@dimen/common_input_padding"
            android:textSize="@dimen/common_input_text_size" />

        <EditText
            android:id="@+id/et_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_city"
            android:inputType="textPersonName"
            android:paddingEnd="@dimen/common_input_padding"
            android:paddingStart="@dimen/common_input_padding"
            android:textSize="@dimen/common_input_text_size" />

        <EditText
            android:id="@+id/et_zip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_zip"
            android:inputType="textPersonName"
            android:paddingEnd="@dimen/common_input_padding"
            android:paddingStart="@dimen/common_input_padding"
            android:textSize="@dimen/common_input_text_size" />

        <Button
            android:id="@+id/bt_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/scale_30"
            android:layout_marginStart="@dimen/scale_5"
            android:layout_marginEnd="@dimen/scale_5"
            android:background="@color/colorPrimary"
            android:text="@string/label_save"
            android:textColor="@color/white"
            android:textSize="@dimen/text_scale_20" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="623dp"
        app:layout_constraintVertical_bias="0.0">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
