<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/scale_20"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_your_email"
            android:inputType="textEmailAddress"
            android:paddingEnd="@dimen/common_input_padding"
            android:paddingStart="@dimen/common_input_padding"
            android:textSize="@dimen/common_input_text_size" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/scale_20"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:paddingEnd="@dimen/common_input_padding"
            android:paddingStart="@dimen/common_input_padding"
            android:textSize="@dimen/common_input_text_size" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/scale_30"
            android:layout_marginStart="@dimen/scale_5"
            android:layout_marginEnd="@dimen/scale_5"
            android:background="@color/colorPrimary"
            android:paddingEnd="@dimen/scale_20"
            android:paddingStart="@dimen/scale_20"
            android:text="@string/label_login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_scale_20" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/scale_30"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/bt_fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/scale_20"
                android:src="@drawable/ic_fb" />

            <ImageView
                android:id="@+id/bt_gp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/scale_20"
                android:src="@drawable/ic_google_plus"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/scale_10"
        android:text="@string/label_forgot_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="0dp" />


    <TextView
        android:id="@+id/tv_create_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/scale_10"
        android:text="@string/label_create_new_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="239dp" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
