<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.snackspop.snackspopnew.Activity.FilterActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/scale_5">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/iv_back"
                    android:maxLines="1"
                    android:padding="@dimen/scale_5"
                    android:layout_marginRight="40dp"
                    android:text="@string/label_filters"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_scale_20" />


            </RelativeLayout>
        </android.support.v7.widget.Toolbar>


        <LinearLayout
            android:id="@+id/ll_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:orientation="vertical"
            android:padding="@dimen/scale_5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/scale_5"
                android:text="@string/label_foods"
                android:visibility="gone"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_scale_18"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/scale_1"
                android:visibility="gone"
                android:layout_marginTop="@dimen/scale_5"
                android:background="@color/grey_bg" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/sw_include_closed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:padding="@dimen/scale_5"
                android:visibility="gone"
                android:text="@string/label_include"
                android:textOff=""
                android:textOn=""
                app:showText="true"
                app:switchPadding="5dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/scale_15"
                android:padding="@dimen/scale_5"
                android:text="@string/label_price"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_scale_18"
                android:textStyle="bold"

                />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/scale_1"
                android:layout_marginTop="@dimen/scale_5"
                android:background="@color/grey_bg" />

            <com.crystal.crystalrangeseekbar.widgets.BubbleThumbRangeSeekbar
                android:id="@+id/rangeSeekbar_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/scale_5"
                app:bar_color="@color/grey_bg"
                app:bar_highlight_color="@color/colorPrimary"
                app:corner_radius="10"
                app:data_type="_integer"
                app:steps="1" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:id="@+id/tv_min"
                    android:text="0" />

                <TextView
                    android:id="@+id/tv_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="1000" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_body"
            android:layout_marginTop="@dimen/scale_15"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/grey_bg"
                android:text="@string/label_clear"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/bt_apply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/label_apply"
                android:textColor="@color/white" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
