<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context="com.snackspop.snackspopnew.Activity.Fragment.MyProductFragment">

    <!--app:srl_direction="both"-->
    <com.snackspop.snackspopnew.SwipeFreshLayout.SwipyRefreshLayout
        android:id="@+id/swipe_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_above="@+id/ll_footer">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.snackspop.snackspopnew.SwipeFreshLayout.SwipyRefreshLayout>

    <LinearLayout
        android:id="@+id/ll_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_set_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/scale_1"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="@dimen/scale_10"
            android:text="@string/label_set_location"
            android:textColor="@color/white"
            android:textSize="@dimen/text_scale_18" />


        <TextView
            android:id="@+id/tv_add_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="@dimen/scale_10"
            android:text="@string/label_add_new"
            android:textColor="@color/white"
            android:textSize="@dimen/text_scale_18" />
    </LinearLayout>

    <TextView
        android:id="@+id/no_goodies_nearby"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center"
        android:text="@string/no_ggodies_found"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:visibility="gone" />


        <TextView
            android:id="@+id/progressMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/progress_bar"
            android:textColor="@color/colorPrimary"
            android:visibility="gone"
            android:gravity="center"
            android:background="@android:color/transparent" />
    </LinearLayout>

</RelativeLayout>
